# pythia

./: .gitignore  .run_server.sh  CHANGELOG.md  OPTIMIZATION_GUIDE.md  README.md  benchmark_wo013.py  main.py  mesh_utils.py  pyproject.toml  sam_wrapper.py  server.py  splat_export.py  texture_baking.py
sam3d_objects/: __init__.py
sam3d_objects/model/backbone/dit/embedder/: dino.py
sam3d_objects/model/backbone/generator/: classifier_free_guidance.py
sam3d_objects/model/backbone/generator/flow_matching/: solver.py
sam3d_objects/model/backbone/tdfy_dit/models/: structured_latent_flow.py
sam3d_objects/model/backbone/tdfy_dit/models/structured_latent_vae/: base.py  decoder_gs.py  decoder_mesh.py
sam3d_objects/model/backbone/tdfy_dit/modules/: norm.py
sam3d_objects/model/backbone/tdfy_dit/modules/sparse/: __init__.py  basic.py  linear.py  norm.py  spatial.py
sam3d_objects/model/backbone/tdfy_dit/modules/sparse/attention/: __init__.py  flash_attn.metal  full_attn.py  (+5 more)
sam3d_objects/model/backbone/tdfy_dit/renderers/: gaussian_render.py
sam3d_objects/model/backbone/tdfy_dit/representations/gaussian/: gaussian_model.py
sam3d_objects/model/backbone/tdfy_dit/representations/mesh/: cube2mesh.py  utils_cube.py
sam3d_objects/model/backbone/tdfy_dit/utils/: postprocessing_utils.py  render_utils.py
sam3d_objects/pipeline/: inference_pipeline.py  inference_pipeline_low_memory.py  inference_pipeline_pointmap.py  layout_post_optimization_utils.py
sam3d_objects/pipeline/depth_models/: base.py
sam3d_objects/utils/: device.py  memory_utils.py
static/: index.html  sam1.html  sam2-video.html  sam2.html
tests/: test_texturing.py
tmp/: bake_real.html  bake_roundtrip.html  bake_test.html  bake_view.html  inspect_glb.py
tmp/bench/: D_ss1__kid_box.json  benchmark_results.md
tmp/three_test/: package-lock.json  package.json  repro.mjs  strip.mjs
(+5 files in other folders)
