[project]
name = "sam3d-mps"
version = "0.1.0"
description = "SAM-3D MPS Pipeline for macOS/Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "pillow>=10.0.0",
    "einops>=0.7.0",
    
    # 3D Processing
    "trimesh>=4.0.0",
    "pymeshlab>=2023.12",
    "open3d>=0.18.0",
    "point-cloud-utils>=0.29.0",
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git",
    
    # ML Framework
    "safetensors>=0.4.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "timm>=0.9.0",
    
    # MoGe depth model
    "MoGe @ git+https://github.com/microsoft/MoGe.git@a8c37341bc0325ca99b9d57981cc3bb2bd3e255b",
    
    # Config & Logging
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.0",
    
    # Utils
    "tqdm>=4.66.0",
    "easydict>=1.10.0",
    "optree>=0.10.0",
    "astor>=0.8.0",
    "lightning>=2.1.0",
    "roma>=1.5.1",
    "xatlas>=0.0.9",
    "pyvista>=0.40.0",
    "pymeshfix>=0.17.0",
    "python-igraph>=0.11.0",
    "opencv-python>=4.8.0",
    "utils3d @ git+https://github.com/EasternJournalist/utils3d.git@3913c65d81e05e47b9f367250cf8c0f7462a0900",
    "diffusers>=0.25.0",
    "seaborn>=0.13.0",
    "pyobjc-framework-Metal>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "gradio>=4.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sam3d_objects"]

[tool.uv.extra-build-dependencies]
pytorch3d = ["torch", "setuptools"]
